lab10/zad5/service-frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  # default type
  # type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: hello
    tier: frontend
