lab10/zad5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
    - host: myapp-hello.me
    - http:
        paths:
        - path: /frontend
          pathType: Prefix
        # - path: /*
        #   pathType: ImplementationSpecific
          backend:
            service:
              name: frontend
              port:
                number: 80
        # - path: /backend
        #   pathType: Prefix
        #   backend:
        #     service:
        #       name: backend
        #       port:
        #         number: 5000
